--- a/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/section-cantidadregistro-inventarios/section-cantidadregistro-inventarios.component.html
@@ -1,6 +1,6 @@
 <div class="flex h-full  gap-4 sm:gap-6">
   <div class=" flex-1 bg-white border shadow-sm rounded-xl">
-    <div class=" altura p-4 w-full h-full md:p-5 ">
+    <div class=" p-4 w-full h-full md:p-5 ">
       <h1 class="title-grafico">GRÁFICO <span>BARRAS</span> </h1>
       <canvas  #barChart_inventario></canvas>
     </div>
