--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -15,7 +15,7 @@
   <div class="offcanvas-body">
     <mat-tab-group>
       <mat-tab label="Datos generales">
-        <div class="grid grid-cols-1 md:grid-cols-2 shadow-lg rounded-lg overflow-hidden detalle-general">
+        <div class="py-6 grid grid-cols-1 md:grid-cols-2 shadow-lg rounded-lg overflow-hidden detalle-general">
           <!-- Sección izquierda: Descripción y estado -->
           <div class="fondo flex flex-col px-8 py-10 justify-center items-center gap-6
           text-white rounded-l-lg
