22_02_2025 ARREGLO REPORTE EXPORTACION

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.css
@@ -53,7 +53,8 @@
 .container-datos-page {
   width: fit-content;
   min-width: 70.1875rem;
-  height: 70vh;
+  height: calc(100vh - 22.5vh) ;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   background-color: white;
