--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -44,8 +44,6 @@
             />
           </div>
 
-
-
           <div class="apartado-productos">
             <design-page-tabla-datos
               [listaProductos]="detalleProductos"
@@ -54,46 +52,35 @@
           </div>
 
           <div class="apartado-stats">
-            <stats-reporte [detalleProductos]="detalleProductos"/>
+            <stats-reporte [detalleProductos]="detalleProductos" />
           </div>
         </div>
       </mat-tab>
 
       <mat-tab label="Descarga">
-        <button
+        <div class="p-6 box-border">
+          <button
           (click)="
             inventarioSeleccionado(
               citaSeleccionada.rucempresa,
               citaSeleccionada.idcarga
             )
           "
-          id="hs-header-base-mega-menu-fullwidth"
-          type="button"
-          class="hs-dropdown-toggle p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100"
-          aria-haspopup="menu"
-          aria-expanded="false"
-          aria-label="Mega Menu"
+          class="p-5 boder-target rounded-lg hover:shadow-lg bg-white flex flex-col items-center text-center transition-transform transform"
         >
-          Descargar PDF
-          <svg
-            class="shrink-0 size-4"
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
+          <mat-icon class="text-[var(--color-principal-2)] mb-2 size-6"
+            >download</mat-icon
           >
-            <path
-              d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"
-            ></path>
-            <path d="M12 12v9"></path>
-            <path d="m8 17 4 4 4-4"></path>
-          </svg>
+          <span
+            class="text-xs uppercase text-[var(--color-principal-5)] font-semibold"
+            >PDF</span
+          >
+          <span class="text-sm font-medium text-[var(--color-principal-1)]">
+            Descargar
+          </span>
         </button>
+        </div>
+
       </mat-tab>
     </mat-tab-group>
   </div>
