--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -17,7 +17,9 @@
           <div class="grow">
             <div
               class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1"
-            ></div>
+            >
+
+            </div>
           </div>
         </div>
       </div>
@@ -60,27 +62,26 @@
       <mat-tab label="Descarga">
         <div class="p-6 box-border">
           <button
-          (click)="
-            inventarioSeleccionado(
-              citaSeleccionada.rucempresa,
-              citaSeleccionada.idcarga
-            )
-          "
-          class="p-5 boder-target rounded-lg hover:shadow-lg bg-white flex flex-col items-center text-center transition-transform transform"
-        >
-          <mat-icon class="text-[var(--color-principal-2)] mb-2 size-6"
-            >download</mat-icon
+            (click)="
+              inventarioSeleccionado(
+                citaSeleccionada.rucempresa,
+                citaSeleccionada.idcarga
+              )
+            "
+            class="p-5 boder-target rounded-lg hover:shadow-lg bg-white flex flex-col items-center text-center transition-transform transform"
           >
-          <span
-            class="text-xs uppercase text-[var(--color-principal-5)] font-semibold"
-            >PDF</span
-          >
-          <span class="text-sm font-medium text-[var(--color-principal-1)]">
-            Descargar
-          </span>
-        </button>
+            <mat-icon class="text-[var(--color-principal-2)] mb-2 size-6"
+              >download</mat-icon
+            >
+            <span
+              class="text-xs uppercase text-[var(--color-principal-5)] font-semibold"
+              >PDF</span
+            >
+            <span class="text-sm font-medium text-[var(--color-principal-1)]">
+              Descargar
+            </span>
+          </button>
         </div>
-
       </mat-tab>
     </mat-tab-group>
   </div>
