--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -122,39 +122,25 @@
                         Operaciones
                       </th>
                       <td mat-cell *matCellDef="let row">
-                        <mat-menu #menu="matMenu">
-                          <div class="container-matmenu">
-                            <h3>Opciones</h3>
-                            <hr />
-                            <descargar-reporte-excel
-                              [rucEmpresa]="row.rucempresa"
-                              [idCarga]="row.idcarga"
-                            />
-                            <hr />
-                            <button
-                              class="btn btn-secondary w-full"
-                              (click)="
+                        <div class="px-1 py-3">
+                          <button
+                          (click)="
                                 inventarioSeleccionadoPDF(
                                   row.rucempresa,
                                   row.idcarga
                                 )
                               "
-                              type="button"
-                              data-bs-toggle="offcanvas"
-                              data-bs-target="#disenoreporte"
-                              aria-controls="offcanvasRight"
-                            >
-                              PDF
-                            </button>
-                          </div>
-                        </mat-menu>
+                          class="btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg border border-gray-200 bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none "
+                            type="button"
+                            data-bs-toggle="offcanvas"
+                            data-bs-target="#disenoreporte"
+                            aria-controls="offcanvasRight"
+                          >
+                          <mat-icon>download</mat-icon>
+                          </button>
+                        </div>
 
-                        <button mat-button [matMenuTriggerFor]="menu">
-                          <img
-                            src="../../../../../../assets/svg/icon-options.svg"
-                            alt=""
-                          />
-                        </button>
+
                       </td>
                     </ng-container>
 
