--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.css
@@ -85,12 +85,10 @@
   justify-content: center;
   text-align: center;
   cursor: pointer;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .opcion.selected {
-  background-color: white !important; /* Asegura que el fondo se pinte */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: white !important;
 }
 
 
